--- a/UlukunShop.UI/src/app/admin/components/products/list/list.component.html
+++ b/UlukunShop.UI/src/app/admin/components/products/list/list.component.html
@@ -26,14 +26,19 @@
       <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="qrcode">
+      <th mat-header-cell *matHeaderCellDef width="30px"> Qrcode </th>
+      <td mat-cell *matCellDef="let element"> <img (click)="showQRCode(element.id)" alt="Get product qr code" style="cursor: pointer" width="30" src="./assets/qrcode_icon.png"> </td>
+    </ng-container>
+
     <ng-container matColumnDef="images">
-      <th mat-header-cell *matHeaderCellDef width="30px"> Edit </th>
-      <td mat-cell *matCellDef="let element"> <img alt="Add product image" (click)="addProductImages(element.id)" style="cursor: pointer" width="30" src="../../../../../assets/addimage.png"> </td>
+      <th mat-header-cell *matHeaderCellDef width="30px"> Image </th>
+      <td mat-cell *matCellDef="let element"> <img alt="Add product image" (click)="addProductImages(element.id)" style="cursor: pointer" width="30" src="./assets/addimage.png"> </td>
     </ng-container>
 
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef width="30px"> Edit </th>
-      <td mat-cell *matCellDef="let element"> <img style="cursor: pointer" width="30" src="../../../../../assets/edit_icon_2.png"> </td>
+      <td mat-cell *matCellDef="let element"> <img style="cursor: pointer" width="30" src="./assets/edit_icon_2.png"> </td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
