qrcode-reading-dialog.component.ts is added. also tested.

--- a/UlukunShop.UI/src/app/admin/components/products/products.component.html
+++ b/UlukunShop.UI/src/app/admin/components/products/products.component.html
@@ -5,5 +5,7 @@
   <mat-drawer-content>
     <app-list class=""></app-list>
     <button mat-raised-button color="accent" class="product-create-button mt-5"  mat-raised-button (click)="drawer.toggle()">Yeni Ürün Ekle</button>
+    <button mat-raised-button color="accent" class="product-create-button ms-3" (click)="openProductQrCodeReadingDialog()" >Urun Tara (QR)</button>
+
   </mat-drawer-content>
 </mat-drawer-container>
