--- a/UlukunShop.UI/src/app/admin/components/products/create/create.component.html
+++ b/UlukunShop.UI/src/app/admin/components/products/create/create.component.html
@@ -4,6 +4,11 @@
 </mat-form-field>
 
 <mat-form-field appearance="fill" class="product-create-input">
+  <mat-label>Properties</mat-label>
+  <input matInput type="text"  #txtProperties>
+</mat-form-field>
+
+<mat-form-field appearance="fill" class="product-create-input">
   <mat-label>Stock</mat-label>
   <input matInput type="number" min="0" value="0" #txtStock>
 </mat-form-field>
@@ -13,5 +18,7 @@
   <input matInput type="number" min="0" value="0" #txtPrice>
 </mat-form-field>
 
-<button mat-raised-button color="accent" class="product-create-button" (click)="create(txtName,txtPrice,txtStock)">Ürünü Kaydet</button>
+
+
+<button mat-raised-button color="accent" class="product-create-button" (click)="create(txtName,txtProperties,txtPrice,txtStock)">Ürünü Kaydet</button>
 
