--- a/UlukunShop.UI/src/app/dialogs/product-edit-dialog/product-edit-dialog.component.html
+++ b/UlukunShop.UI/src/app/dialogs/product-edit-dialog/product-edit-dialog.component.html
@@ -1,29 +1,29 @@
-<div class="m-5">
+<div class="m-5 row">
 
 
 
-<mat-form-field appearance="fill" class="product-create-input">
+<mat-form-field appearance="fill" class="product-create-input col-md-12">
   <mat-label>Name</mat-label>
-  <input matInput #txtName>
+  <input matInput type="text" value="{{name}}" #txtName>
 </mat-form-field>
 
-<mat-form-field appearance="fill" class="product-create-input">
+<mat-form-field appearance="fill" class="product-create-input col-md-12">
   <mat-label>Properties</mat-label>
-  <input matInput type="text"  #txtProperties>
+  <input matInput type="text" value="{{property}}" #txtProperties>
 </mat-form-field>
 
-<mat-form-field appearance="fill" class="product-create-input">
+<mat-form-field appearance="fill" class="product-create-input col-md-12">
   <mat-label>Stock</mat-label>
-  <input matInput type="number" min="0" value="0" #txtStock>
+  <input matInput type="number" min="0" value="{{stock}}" #txtStock>
 </mat-form-field>
 
-<mat-form-field appearance="fill" class="product-create-input">
+<mat-form-field appearance="fill" class="product-create-input col-md-12">
   <mat-label>Price</mat-label>
-  <input matInput type="number" min="0" value="0" #txtPrice>
+  <input matInput type="number" min="0" value="{{price}}" #txtPrice>
 </mat-form-field>
 
 
 
-<button mat-raised-button color="accent" class="product-create-button" (click)="updateProduct(txtName,txtProperties,txtPrice,txtStock)">Ürünü Kaydet</button>
+<button mat-raised-button color="accent" class="product-create-button" (click)="updateProduct(txtName,txtProperties,txtPrice,txtStock)">Degisiklikleri Kaydet</button>
 
 </div>
