--- a/UlukunShop.UI/src/app/admin/components/products/list/list.component.html
+++ b/UlukunShop.UI/src/app/admin/components/products/list/list.component.html
@@ -13,17 +13,17 @@
 
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.price | currency : '₺'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="createdDate">
       <th mat-header-cell *matHeaderCellDef> Created Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.createdDate | date : 'dd/MM/yyyy HH:mm'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="updatedDate">
       <th mat-header-cell *matHeaderCellDef> Updated Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.updatedDate | date : 'dd/MM/yyyy HH:mm'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="qrcode">
