--- a/UlukunShop.UI/src/app/dialogs/product-edit-dialog/product-edit-dialog.component.html
+++ b/UlukunShop.UI/src/app/dialogs/product-edit-dialog/product-edit-dialog.component.html
@@ -24,6 +24,6 @@
 
 
 
-<button mat-raised-button color="accent" class="product-create-button" (click)="updateProduct(txtName,txtProperties,txtPrice,txtStock)">Degisiklikleri Kaydet</button>
+<button mat-raised-button color="accent" class="product-create-button" [matDialogClose]="" (click)="updateProduct(txtName,txtProperties,txtPrice,txtStock)">Degisiklikleri Kaydet</button>
 
 </div>
